src/Base/main/default/objects/Mercury_Product__c/Mercury_Product__c.object-meta.xml
<CustomObject>
    <label>Mercury Product</label>
    <nameField>
        <displayFormat>MercProd-{0000}</displayFormat>
        <label>Mercury Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mercury Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>