src/Base/main/default/objects/Mercury_Product__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Mercury Product Description</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>