src/Base/main/default/objects/Mercury_Product__c/fields/Superseded_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Superseded_Item_Code__c</fullName>
    <inlineHelpText>The superseded part number</inlineHelpText>
    <label>Superseded Item Code</label>
    <length>14</length>
    <type>Text</type>
</CustomField>