src/Base/main/default/objects/Mercury_Product__c/fields/UPC__c.field-meta.xml
<CustomField>
    <fullName>UPC__c</fullName>
    <description>Mercury UPC field</description>
    <label>UPC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>